Disabled form animation, blocked off Allegiance file sharing.

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -82,10 +82,8 @@
           "compress": false,
           "sourceMaps": false,
           "customOutput": false,
-          "imported": true,
-          "parents": [
-            "f5d607e2"
-          ],
+          "imported": false,
+          "parents": [],
           "type": "less"
         },
         "f5d607e2": {
@@ -1416,6 +1414,193 @@
             "f5d607e2"
           ],
           "type": "less"
+        },
+        "56f29b99": {
+          "id": "56f29b99",
+          "path": "alleg-index.html",
+          "output": "alleg-index.html",
+          "name": "alleg-index.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "7a4ec307": {
+          "id": "7a4ec307",
+          "path": "original_files/all.css",
+          "output": "original_files/all-dist.css",
+          "name": "all.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "718a25db": {
+          "id": "718a25db",
+          "path": "original_files/api.js",
+          "output": "original_files/api-dist.js",
+          "name": "api.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "5aa931b4": {
+          "id": "5aa931b4",
+          "path": "original_files/donation.js",
+          "output": "original_files/donation-dist.js",
+          "name": "donation.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "43adbb1c": {
+          "id": "43adbb1c",
+          "path": "original_files/gnc.css",
+          "output": "original_files/gnc-dist.css",
+          "name": "gnc.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "38b55eb1": {
+          "id": "38b55eb1",
+          "path": "original_files/ig_shared.css",
+          "output": "original_files/ig_shared-dist.css",
+          "name": "ig_shared.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "be6651a8": {
+          "id": "be6651a8",
+          "path": "original_files/ig_texteditor.css",
+          "output": "original_files/ig_texteditor-dist.css",
+          "name": "ig_texteditor.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "dda766d0": {
+          "id": "dda766d0",
+          "path": "original_files/naNgw7IA0AXushX_kCLqNP65BaHnFDIS1kKzvOHnMVQ.js",
+          "output": "original_files/naNgw7IA0AXushX_kCLqNP65BaHnFDIS1kKzvOHnMVQ-dist.js",
+          "name": "naNgw7IA0AXushX_kCLqNP65BaHnFDIS1kKzvOHnMVQ.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "cb6f9b75": {
+          "id": "cb6f9b75",
+          "path": "original_files/navigation.js",
+          "output": "original_files/navigation-dist.js",
+          "name": "navigation.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "f5d46b88": {
+          "id": "f5d46b88",
+          "path": "original_files/recaptcha.js",
+          "output": "original_files/recaptcha-dist.js",
+          "name": "recaptcha.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "25c40d6b": {
+          "id": "25c40d6b",
+          "path": "original_files/recaptcha__en.js",
+          "output": "original_files/recaptcha__en-dist.js",
+          "name": "recaptcha__en.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "5e4dfeb0": {
+          "id": "5e4dfeb0",
+          "path": "original_files/utility.js",
+          "output": "original_files/utility-dist.js",
+          "name": "utility.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
